Replace old Schedule gen API with tasks from OpenAPI2 (#180)
* Specify OpenAPI2 tasks schedule gen api 
* Move OpenAPI2 defs to backend and remove ver postfix
* Replace old Schedule gen api with tasks from OpenAPI2
